--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,8 +20,8 @@ jobs:
         uses: actions/setup-python@v2                               
         with:                                 
           python-version: '3.8'                                                   
-      - name: 💿 Install feedparser, pytz & Jinja2                              
-        run: pip install feedparser pytz Jinja2 emoji-country-flag
+      - name: 💿 Install Jinja2 & requests                            
+        run: pip install Jinja2 requests
       - name: 🍳 Update README
         run: |
           cd ${GITHUB_WORKSPACE}/src/
