--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,7 @@ jobs:
         with:                                 
           python-version: '3.8'                                                   
       - name: 💿 Install Jinja2 & requests
-        run: pip install Jinja2 requests
+        run: pip install Jinja2 requests opencv-python
       - name: 🍳 Update README
         run: |
           cd ${GITHUB_WORKSPACE}/src/
