--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,5 +1,5 @@
 
-name: cron
+name: Update `README.md`
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
       - name: 🍳 Update README
         run: |
           cd ${GITHUB_WORKSPACE}/src/
-          python update.py
+          python update.py ${{ secrets.GITHUB_TOKEN }}
       - name: 🚀 Deploy
         run: |
           git config user.name "${GITHUB_ACTOR}"
