--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,6 +2,7 @@
 name: README.md 🌀
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -28,8 +29,8 @@ jobs:
           python update.py ${{ secrets.TOKEN }}
       - name: 🚀 Deploy
         run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config user.name "r2d2gg"
+          git config user.email "r2d2gg@users.noreply.github.com"
           git add .
           git commit -am "feat(auto generate): Updated content"
           git push --all -f https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
