--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,8 +29,8 @@ jobs:
           python update.py ${{ secrets.TOKEN }}
       - name: 🚀 Deploy
         run: |
-          git config user.name "r2d2gg"
-          git config user.email "r2d2gg@users.noreply.github.com"
+          git config user.name "R2-D2g"
+          git config user.email "R2-D2g@users.noreply.github.com"
           git add .
           git commit -am "feat(auto generate): Updated content"
           git push --all -f https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
